kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/025_weaving_in_kermeta_aspect8.kmt
/* $Id: 025_weaving_in_kermeta_aspect8.kmt,v 1.2 2007-07-20 15:08:11 ftanguy Exp $ */

// Type checking of kermeta weavinf

package weavinginvalidtest7;


require kermeta
require "025_weaving_in_kermeta_aspect8/025_weaving_in_kermeta_aspect8_baseClass.kmt"

using kermeta::standard



@aspect "true"
class A {
	operation amethod() : A is do
		result := OrderedSet<A>.new
	end

}

/* END OF FILE */